server/Analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> prints PT_COMA
Rule 5     instruccion -> declaracion PT_COMA
Rule 6     instruccion -> sent_if
Rule 7     instruccion -> match
Rule 8     prints -> PRINTLN ADMIRACION PARA CADENA COMA list_exp PARC
Rule 9     prints -> PRINTLN ADMIRACION PARA CADENA PARC
Rule 10    list_exp -> list_exp COMA expresion
Rule 11    list_exp -> expresion
Rule 12    declaracion -> LET MUT ID DOS_PT tipo IGUAL expresion
Rule 13    declaracion -> LET MUT ID DOS_PT tipo
Rule 14    declaracion -> LET MUT ID IGUAL expresion
Rule 15    declaracion -> LET MUT ID
Rule 16    declaracion -> LET ID DOS_PT tipo IGUAL expresion
Rule 17    declaracion -> LET ID DOS_PT tipo
Rule 18    declaracion -> LET ID IGUAL expresion
Rule 19    declaracion -> LET ID
Rule 20    declaracion -> ID IGUAL expresion
Rule 21    sent_if -> IF expresion statement sent_else
Rule 22    sent_else -> ELSE statement
Rule 23    sent_else -> ELSE sent_if
Rule 24    sent_else -> <empty>
Rule 25    match -> MATCH expresion casos_match
Rule 26    casos_match -> LLAVA lista_casos default LLAVC
Rule 27    lista_casos -> lista_casos lista_expresiones ARROW statement COMA
Rule 28    lista_casos -> lista_casos lista_expresiones ARROW instruccion COMA
Rule 29    lista_casos -> lista_expresiones ARROW statement COMA
Rule 30    lista_casos -> lista_expresiones ARROW instruccion COMA
Rule 31    lista_expresiones -> lista_expresiones SEP_MATCH expresion
Rule 32    lista_expresiones -> expresion
Rule 33    default -> GUION_B ARROW statement COMA
Rule 34    default -> GUION_B ARROW instruccion COMA
Rule 35    statement -> LLAVA instrucciones LLAVC
Rule 36    statement -> LLAVA LLAVC
Rule 37    tipo -> I64
Rule 38    tipo -> F64
Rule 39    tipo -> BOOL
Rule 40    tipo -> STRING
Rule 41    tipo -> STR
Rule 42    tipo -> CHAR
Rule 43    expresion -> expresion MAS expresion
Rule 44    expresion -> expresion MENOS expresion
Rule 45    expresion -> expresion MULTI expresion
Rule 46    expresion -> expresion DIV expresion
Rule 47    expresion -> expresion MODULO expresion
Rule 48    expresion -> I64 DOS_PT DOS_PT POW PARA expresion COMA expresion PARC
Rule 49    expresion -> PARA expresion PARC
Rule 50    expresion -> MENOS expresion
Rule 51    expresion -> expresion IGUAL_IGUAL expresion
Rule 52    expresion -> expresion NO_IGUAL expresion
Rule 53    expresion -> expresion MAYOR expresion
Rule 54    expresion -> expresion MENOR expresion
Rule 55    expresion -> expresion MAYOR_IGUAL expresion
Rule 56    expresion -> expresion MENOR_IGUAL expresion
Rule 57    expresion -> expresion AND expresion
Rule 58    expresion -> expresion OR expresion
Rule 59    expresion -> NOT expresion
Rule 60    expresion -> expresion PUNTO TO_OWNED PARA PARC
Rule 61    expresion -> expresion PUNTO TO_STRING PARA PARC
Rule 62    expresion -> ENTERO
Rule 63    expresion -> DECIMAL
Rule 64    expresion -> CARACTER
Rule 65    expresion -> CADENA
Rule 66    expresion -> TRUE
Rule 67    expresion -> FALSE
Rule 68    expresion -> ID

Terminals, with rules where they appear

ADMIRACION           : 8 9
AND                  : 57
ARROW                : 27 28 29 30 33 34
BOOL                 : 39
CADENA               : 8 9 65
CARACTER             : 64
CHAR                 : 42
COMA                 : 8 10 27 28 29 30 33 34 48
DECIMAL              : 63
DIV                  : 46
DOS_PT               : 12 13 16 17 48 48
ELSE                 : 22 23
ENTERO               : 62
F64                  : 38
FALSE                : 67
GUION_B              : 33 34
I64                  : 37 48
ID                   : 12 13 14 15 16 17 18 19 20 68
IF                   : 21
IGUAL                : 12 14 16 18 20
IGUAL_IGUAL          : 51
LET                  : 12 13 14 15 16 17 18 19
LLAVA                : 26 35 36
LLAVC                : 26 35 36
MAS                  : 43
MATCH                : 25
MAYOR                : 53
MAYOR_IGUAL          : 55
MENOR                : 54
MENOR_IGUAL          : 56
MENOS                : 44 50
MODULO               : 47
MULTI                : 45
MUT                  : 12 13 14 15
NOT                  : 59
NO_IGUAL             : 52
OR                   : 58
PARA                 : 8 9 48 49 60 61
PARC                 : 8 9 48 49 60 61
POW                  : 48
PRINTLN              : 8 9
PT_COMA              : 4 5
PUNTO                : 60 61
SEP_MATCH            : 31
STR                  : 41
STRING               : 40
TO_OWNED             : 60
TO_STRING            : 61
TRUE                 : 66
error                : 

Nonterminals, with rules where they appear

casos_match          : 25
declaracion          : 5
default              : 26
expresion            : 10 11 12 14 16 18 20 21 25 31 32 43 43 44 44 45 45 46 46 47 47 48 48 49 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 60 61
inicio               : 0
instruccion          : 2 3 28 30 34
instrucciones        : 1 2 35
list_exp             : 8 10
lista_casos          : 26 27 28
lista_expresiones    : 27 28 29 30 31
match                : 7
prints               : 4
sent_else            : 21
sent_if              : 6 23
statement            : 21 22 27 29 33
tipo                 : 12 13 16 17

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . prints PT_COMA
    (5) instruccion -> . declaracion PT_COMA
    (6) instruccion -> . sent_if
    (7) instruccion -> . match
    (8) prints -> . PRINTLN ADMIRACION PARA CADENA COMA list_exp PARC
    (9) prints -> . PRINTLN ADMIRACION PARA CADENA PARC
    (12) declaracion -> . LET MUT ID DOS_PT tipo IGUAL expresion
    (13) declaracion -> . LET MUT ID DOS_PT tipo
    (14) declaracion -> . LET MUT ID IGUAL expresion
    (15) declaracion -> . LET MUT ID
    (16) declaracion -> . LET ID DOS_PT tipo IGUAL expresion
    (17) declaracion -> . LET ID DOS_PT tipo
    (18) declaracion -> . LET ID IGUAL expresion
    (19) declaracion -> . LET ID
    (20) declaracion -> . ID IGUAL expresion
    (21) sent_if -> . IF expresion statement sent_else
    (25) match -> . MATCH expresion casos_match

    PRINTLN         shift and go to state 8
    LET             shift and go to state 9
    ID              shift and go to state 10
    IF              shift and go to state 11
    MATCH           shift and go to state 12

    inicio                         shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    prints                         shift and go to state 4
    declaracion                    shift and go to state 5
    sent_if                        shift and go to state 6
    match                          shift and go to state 7

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . prints PT_COMA
    (5) instruccion -> . declaracion PT_COMA
    (6) instruccion -> . sent_if
    (7) instruccion -> . match
    (8) prints -> . PRINTLN ADMIRACION PARA CADENA COMA list_exp PARC
    (9) prints -> . PRINTLN ADMIRACION PARA CADENA PARC
    (12) declaracion -> . LET MUT ID DOS_PT tipo IGUAL expresion
    (13) declaracion -> . LET MUT ID DOS_PT tipo
    (14) declaracion -> . LET MUT ID IGUAL expresion
    (15) declaracion -> . LET MUT ID
    (16) declaracion -> . LET ID DOS_PT tipo IGUAL expresion
    (17) declaracion -> . LET ID DOS_PT tipo
    (18) declaracion -> . LET ID IGUAL expresion
    (19) declaracion -> . LET ID
    (20) declaracion -> . ID IGUAL expresion
    (21) sent_if -> . IF expresion statement sent_else
    (25) match -> . MATCH expresion casos_match

    $end            reduce using rule 1 (inicio -> instrucciones .)
    PRINTLN         shift and go to state 8
    LET             shift and go to state 9
    ID              shift and go to state 10
    IF              shift and go to state 11
    MATCH           shift and go to state 12

    instruccion                    shift and go to state 13
    prints                         shift and go to state 4
    declaracion                    shift and go to state 5
    sent_if                        shift and go to state 6
    match                          shift and go to state 7

state 3

    (3) instrucciones -> instruccion .

    PRINTLN         reduce using rule 3 (instrucciones -> instruccion .)
    LET             reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    MATCH           reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVC           reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> prints . PT_COMA

    PT_COMA         shift and go to state 14


state 5

    (5) instruccion -> declaracion . PT_COMA

    PT_COMA         shift and go to state 15


state 6

    (6) instruccion -> sent_if .

    PRINTLN         reduce using rule 6 (instruccion -> sent_if .)
    LET             reduce using rule 6 (instruccion -> sent_if .)
    ID              reduce using rule 6 (instruccion -> sent_if .)
    IF              reduce using rule 6 (instruccion -> sent_if .)
    MATCH           reduce using rule 6 (instruccion -> sent_if .)
    $end            reduce using rule 6 (instruccion -> sent_if .)
    LLAVC           reduce using rule 6 (instruccion -> sent_if .)
    COMA            reduce using rule 6 (instruccion -> sent_if .)


state 7

    (7) instruccion -> match .

    PRINTLN         reduce using rule 7 (instruccion -> match .)
    LET             reduce using rule 7 (instruccion -> match .)
    ID              reduce using rule 7 (instruccion -> match .)
    IF              reduce using rule 7 (instruccion -> match .)
    MATCH           reduce using rule 7 (instruccion -> match .)
    $end            reduce using rule 7 (instruccion -> match .)
    LLAVC           reduce using rule 7 (instruccion -> match .)
    COMA            reduce using rule 7 (instruccion -> match .)


state 8

    (8) prints -> PRINTLN . ADMIRACION PARA CADENA COMA list_exp PARC
    (9) prints -> PRINTLN . ADMIRACION PARA CADENA PARC

    ADMIRACION      shift and go to state 16


state 9

    (12) declaracion -> LET . MUT ID DOS_PT tipo IGUAL expresion
    (13) declaracion -> LET . MUT ID DOS_PT tipo
    (14) declaracion -> LET . MUT ID IGUAL expresion
    (15) declaracion -> LET . MUT ID
    (16) declaracion -> LET . ID DOS_PT tipo IGUAL expresion
    (17) declaracion -> LET . ID DOS_PT tipo
    (18) declaracion -> LET . ID IGUAL expresion
    (19) declaracion -> LET . ID

    MUT             shift and go to state 17
    ID              shift and go to state 18


state 10

    (20) declaracion -> ID . IGUAL expresion

    IGUAL           shift and go to state 19


state 11

    (21) sent_if -> IF . expresion statement sent_else
    (43) expresion -> . expresion MAS expresion
    (44) expresion -> . expresion MENOS expresion
    (45) expresion -> . expresion MULTI expresion
    (46) expresion -> . expresion DIV expresion
    (47) expresion -> . expresion MODULO expresion
    (48) expresion -> . I64 DOS_PT DOS_PT POW PARA expresion COMA expresion PARC
    (49) expresion -> . PARA expresion PARC
    (50) expresion -> . MENOS expresion
    (51) expresion -> . expresion IGUAL_IGUAL expresion
    (52) expresion -> . expresion NO_IGUAL expresion
    (53) expresion -> . expresion MAYOR expresion
    (54) expresion -> . expresion MENOR expresion
    (55) expresion -> . expresion MAYOR_IGUAL expresion
    (56) expresion -> . expresion MENOR_IGUAL expresion
    (57) expresion -> . expresion AND expresion
    (58) expresion -> . expresion OR expresion
    (59) expresion -> . NOT expresion
    (60) expresion -> . expresion PUNTO TO_OWNED PARA PARC
    (61) expresion -> . expresion PUNTO TO_STRING PARA PARC
    (62) expresion -> . ENTERO
    (63) expresion -> . DECIMAL
    (64) expresion -> . CARACTER
    (65) expresion -> . CADENA
    (66) expresion -> . TRUE
    (67) expresion -> . FALSE
    (68) expresion -> . ID

    I64             shift and go to state 22
    PARA            shift and go to state 23
    MENOS           shift and go to state 21
    NOT             shift and go to state 24
    ENTERO          shift and go to state 25
    DECIMAL         shift and go to state 26
    CARACTER        shift and go to state 27
    CADENA          shift and go to state 28
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    ID              shift and go to state 31

    expresion                      shift and go to state 20

state 12

    (25) match -> MATCH . expresion casos_match
    (43) expresion -> . expresion MAS expresion
    (44) expresion -> . expresion MENOS expresion
    (45) expresion -> . expresion MULTI expresion
    (46) expresion -> . expresion DIV expresion
    (47) expresion -> . expresion MODULO expresion
    (48) expresion -> . I64 DOS_PT DOS_PT POW PARA expresion COMA expresion PARC
    (49) expresion -> . PARA expresion PARC
    (50) expresion -> . MENOS expresion
    (51) expresion -> . expresion IGUAL_IGUAL expresion
    (52) expresion -> . expresion NO_IGUAL expresion
    (53) expresion -> . expresion MAYOR expresion
    (54) expresion -> . expresion MENOR expresion
    (55) expresion -> . expresion MAYOR_IGUAL expresion
    (56) expresion -> . expresion MENOR_IGUAL expresion
    (57) expresion -> . expresion AND expresion
    (58) expresion -> . expresion OR expresion
    (59) expresion -> . NOT expresion
    (60) expresion -> . expresion PUNTO TO_OWNED PARA PARC
    (61) expresion -> . expresion PUNTO TO_STRING PARA PARC
    (62) expresion -> . ENTERO
    (63) expresion -> . DECIMAL
    (64) expresion -> . CARACTER
    (65) expresion -> . CADENA
    (66) expresion -> . TRUE
    (67) expresion -> . FALSE
    (68) expresion -> . ID

    I64             shift and go to state 22
    PARA            shift and go to state 23
    MENOS           shift and go to state 21
    NOT             shift and go to state 24
    ENTERO          shift and go to state 25
    DECIMAL         shift and go to state 26
    CARACTER        shift and go to state 27
    CADENA          shift and go to state 28
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    ID              shift and go to state 31

    expresion                      shift and go to state 32

state 13

    (2) instrucciones -> instrucciones instruccion .

    PRINTLN         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LET             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    IF              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    MATCH           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LLAVC           reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 14

    (4) instruccion -> prints PT_COMA .

    PRINTLN         reduce using rule 4 (instruccion -> prints PT_COMA .)
    LET             reduce using rule 4 (instruccion -> prints PT_COMA .)
    ID              reduce using rule 4 (instruccion -> prints PT_COMA .)
    IF              reduce using rule 4 (instruccion -> prints PT_COMA .)
    MATCH           reduce using rule 4 (instruccion -> prints PT_COMA .)
    $end            reduce using rule 4 (instruccion -> prints PT_COMA .)
    LLAVC           reduce using rule 4 (instruccion -> prints PT_COMA .)
    COMA            reduce using rule 4 (instruccion -> prints PT_COMA .)


state 15

    (5) instruccion -> declaracion PT_COMA .

    PRINTLN         reduce using rule 5 (instruccion -> declaracion PT_COMA .)
    LET             reduce using rule 5 (instruccion -> declaracion PT_COMA .)
    ID              reduce using rule 5 (instruccion -> declaracion PT_COMA .)
    IF              reduce using rule 5 (instruccion -> declaracion PT_COMA .)
    MATCH           reduce using rule 5 (instruccion -> declaracion PT_COMA .)
    $end            reduce using rule 5 (instruccion -> declaracion PT_COMA .)
    LLAVC           reduce using rule 5 (instruccion -> declaracion PT_COMA .)
    COMA            reduce using rule 5 (instruccion -> declaracion PT_COMA .)


state 16

    (8) prints -> PRINTLN ADMIRACION . PARA CADENA COMA list_exp PARC
    (9) prints -> PRINTLN ADMIRACION . PARA CADENA PARC

    PARA            shift and go to state 33


state 17

    (12) declaracion -> LET MUT . ID DOS_PT tipo IGUAL expresion
    (13) declaracion -> LET MUT . ID DOS_PT tipo
    (14) declaracion -> LET MUT . ID IGUAL expresion
    (15) declaracion -> LET MUT . ID

    ID              shift and go to state 34


state 18

    (16) declaracion -> LET ID . DOS_PT tipo IGUAL expresion
    (17) declaracion -> LET ID . DOS_PT tipo
    (18) declaracion -> LET ID . IGUAL expresion
    (19) declaracion -> LET ID .

    DOS_PT          shift and go to state 35
    IGUAL           shift and go to state 36
    PT_COMA         reduce using rule 19 (declaracion -> LET ID .)


state 19

    (20) declaracion -> ID IGUAL . expresion
    (43) expresion -> . expresion MAS expresion
    (44) expresion -> . expresion MENOS expresion
    (45) expresion -> . expresion MULTI expresion
    (46) expresion -> . expresion DIV expresion
    (47) expresion -> . expresion MODULO expresion
    (48) expresion -> . I64 DOS_PT DOS_PT POW PARA expresion COMA expresion PARC
    (49) expresion -> . PARA expresion PARC
    (50) expresion -> . MENOS expresion
    (51) expresion -> . expresion IGUAL_IGUAL expresion
    (52) expresion -> . expresion NO_IGUAL expresion
    (53) expresion -> . expresion MAYOR expresion
    (54) expresion -> . expresion MENOR expresion
    (55) expresion -> . expresion MAYOR_IGUAL expresion
    (56) expresion -> . expresion MENOR_IGUAL expresion
    (57) expresion -> . expresion AND expresion
    (58) expresion -> . expresion OR expresion
    (59) expresion -> . NOT expresion
    (60) expresion -> . expresion PUNTO TO_OWNED PARA PARC
    (61) expresion -> . expresion PUNTO TO_STRING PARA PARC
    (62) expresion -> . ENTERO
    (63) expresion -> . DECIMAL
    (64) expresion -> . CARACTER
    (65) expresion -> . CADENA
    (66) expresion -> . TRUE
    (67) expresion -> . FALSE
    (68) expresion -> . ID

    I64             shift and go to state 22
    PARA            shift and go to state 23
    MENOS           shift and go to state 21
    NOT             shift and go to state 24
    ENTERO          shift and go to state 25
    DECIMAL         shift and go to state 26
    CARACTER        shift and go to state 27
    CADENA          shift and go to state 28
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    ID              shift and go to state 31

    expresion                      shift and go to state 37

state 20

    (21) sent_if -> IF expresion . statement sent_else
    (43) expresion -> expresion . MAS expresion
    (44) expresion -> expresion . MENOS expresion
    (45) expresion -> expresion . MULTI expresion
    (46) expresion -> expresion . DIV expresion
    (47) expresion -> expresion . MODULO expresion
    (51) expresion -> expresion . IGUAL_IGUAL expresion
    (52) expresion -> expresion . NO_IGUAL expresion
    (53) expresion -> expresion . MAYOR expresion
    (54) expresion -> expresion . MENOR expresion
    (55) expresion -> expresion . MAYOR_IGUAL expresion
    (56) expresion -> expresion . MENOR_IGUAL expresion
    (57) expresion -> expresion . AND expresion
    (58) expresion -> expresion . OR expresion
    (60) expresion -> expresion . PUNTO TO_OWNED PARA PARC
    (61) expresion -> expresion . PUNTO TO_STRING PARA PARC
    (35) statement -> . LLAVA instrucciones LLAVC
    (36) statement -> . LLAVA LLAVC

    MAS             shift and go to state 39
    MENOS           shift and go to state 40
    MULTI           shift and go to state 41
    DIV             shift and go to state 42
    MODULO          shift and go to state 43
    IGUAL_IGUAL     shift and go to state 44
    NO_IGUAL        shift and go to state 45
    MAYOR           shift and go to state 46
    MENOR           shift and go to state 47
    MAYOR_IGUAL     shift and go to state 48
    MENOR_IGUAL     shift and go to state 49
    AND             shift and go to state 50
    OR              shift and go to state 51
    PUNTO           shift and go to state 52
    LLAVA           shift and go to state 53

    statement                      shift and go to state 38

state 21

    (50) expresion -> MENOS . expresion
    (43) expresion -> . expresion MAS expresion
    (44) expresion -> . expresion MENOS expresion
    (45) expresion -> . expresion MULTI expresion
    (46) expresion -> . expresion DIV expresion
    (47) expresion -> . expresion MODULO expresion
    (48) expresion -> . I64 DOS_PT DOS_PT POW PARA expresion COMA expresion PARC
    (49) expresion -> . PARA expresion PARC
    (50) expresion -> . MENOS expresion
    (51) expresion -> . expresion IGUAL_IGUAL expresion
    (52) expresion -> . expresion NO_IGUAL expresion
    (53) expresion -> . expresion MAYOR expresion
    (54) expresion -> . expresion MENOR expresion
    (55) expresion -> . expresion MAYOR_IGUAL expresion
    (56) expresion -> . expresion MENOR_IGUAL expresion
    (57) expresion -> . expresion AND expresion
    (58) expresion -> . expresion OR expresion
    (59) expresion -> . NOT expresion
    (60) expresion -> . expresion PUNTO TO_OWNED PARA PARC
    (61) expresion -> . expresion PUNTO TO_STRING PARA PARC
    (62) expresion -> . ENTERO
    (63) expresion -> . DECIMAL
    (64) expresion -> . CARACTER
    (65) expresion -> . CADENA
    (66) expresion -> . TRUE
    (67) expresion -> . FALSE
    (68) expresion -> . ID

    I64             shift and go to state 22
    PARA            shift and go to state 23
    MENOS           shift and go to state 21
    NOT             shift and go to state 24
    ENTERO          shift and go to state 25
    DECIMAL         shift and go to state 26
    CARACTER        shift and go to state 27
    CADENA          shift and go to state 28
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    ID              shift and go to state 31

    expresion                      shift and go to state 54

state 22

    (48) expresion -> I64 . DOS_PT DOS_PT POW PARA expresion COMA expresion PARC

    DOS_PT          shift and go to state 55


state 23

    (49) expresion -> PARA . expresion PARC
    (43) expresion -> . expresion MAS expresion
    (44) expresion -> . expresion MENOS expresion
    (45) expresion -> . expresion MULTI expresion
    (46) expresion -> . expresion DIV expresion
    (47) expresion -> . expresion MODULO expresion
    (48) expresion -> . I64 DOS_PT DOS_PT POW PARA expresion COMA expresion PARC
    (49) expresion -> . PARA expresion PARC
    (50) expresion -> . MENOS expresion
    (51) expresion -> . expresion IGUAL_IGUAL expresion
    (52) expresion -> . expresion NO_IGUAL expresion
    (53) expresion -> . expresion MAYOR expresion
    (54) expresion -> . expresion MENOR expresion
    (55) expresion -> . expresion MAYOR_IGUAL expresion
    (56) expresion -> . expresion MENOR_IGUAL expresion
    (57) expresion -> . expresion AND expresion
    (58) expresion -> . expresion OR expresion
    (59) expresion -> . NOT expresion
    (60) expresion -> . expresion PUNTO TO_OWNED PARA PARC
    (61) expresion -> . expresion PUNTO TO_STRING PARA PARC
    (62) expresion -> . ENTERO
    (63) expresion -> . DECIMAL
    (64) expresion -> . CARACTER
    (65) expresion -> . CADENA
    (66) expresion -> . TRUE
    (67) expresion -> . FALSE
    (68) expresion -> . ID

    I64             shift and go to state 22
    PARA            shift and go to state 23
    MENOS           shift and go to state 21
    NOT             shift and go to state 24
    ENTERO          shift and go to state 25
    DECIMAL         shift and go to state 26
    CARACTER        shift and go to state 27
    CADENA          shift and go to state 28
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    ID              shift and go to state 31

    expresion                      shift and go to state 56

state 24

    (59) expresion -> NOT . expresion
    (43) expresion -> . expresion MAS expresion
    (44) expresion -> . expresion MENOS expresion
    (45) expresion -> . expresion MULTI expresion
    (46) expresion -> . expresion DIV expresion
    (47) expresion -> . expresion MODULO expresion
    (48) expresion -> . I64 DOS_PT DOS_PT POW PARA expresion COMA expresion PARC
    (49) expresion -> . PARA expresion PARC
    (50) expresion -> . MENOS expresion
    (51) expresion -> . expresion IGUAL_IGUAL expresion
    (52) expresion -> . expresion NO_IGUAL expresion
    (53) expresion -> . expresion MAYOR expresion
    (54) expresion -> . expresion MENOR expresion
    (55) expresion -> . expresion MAYOR_IGUAL expresion
    (56) expresion -> . expresion MENOR_IGUAL expresion
    (57) expresion -> . expresion AND expresion
    (58) expresion -> . expresion OR expresion
    (59) expresion -> . NOT expresion
    (60) expresion -> . expresion PUNTO TO_OWNED PARA PARC
    (61) expresion -> . expresion PUNTO TO_STRING PARA PARC
    (62) expresion -> . ENTERO
    (63) expresion -> . DECIMAL
    (64) expresion -> . CARACTER
    (65) expresion -> . CADENA
    (66) expresion -> . TRUE
    (67) expresion -> . FALSE
    (68) expresion -> . ID

    I64             shift and go to state 22
    PARA            shift and go to state 23
    MENOS           shift and go to state 21
    NOT             shift and go to state 24
    ENTERO          shift and go to state 25
    DECIMAL         shift and go to state 26
    CARACTER        shift and go to state 27
    CADENA          shift and go to state 28
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    ID              shift and go to state 31

    expresion                      shift and go to state 57

state 25

    (62) expresion -> ENTERO .

    MAS             reduce using rule 62 (expresion -> ENTERO .)
    MENOS           reduce using rule 62 (expresion -> ENTERO .)
    MULTI           reduce using rule 62 (expresion -> ENTERO .)
    DIV             reduce using rule 62 (expresion -> ENTERO .)
    MODULO          reduce using rule 62 (expresion -> ENTERO .)
    IGUAL_IGUAL     reduce using rule 62 (expresion -> ENTERO .)
    NO_IGUAL        reduce using rule 62 (expresion -> ENTERO .)
    MAYOR           reduce using rule 62 (expresion -> ENTERO .)
    MENOR           reduce using rule 62 (expresion -> ENTERO .)
    MAYOR_IGUAL     reduce using rule 62 (expresion -> ENTERO .)
    MENOR_IGUAL     reduce using rule 62 (expresion -> ENTERO .)
    AND             reduce using rule 62 (expresion -> ENTERO .)
    OR              reduce using rule 62 (expresion -> ENTERO .)
    PUNTO           reduce using rule 62 (expresion -> ENTERO .)
    LLAVA           reduce using rule 62 (expresion -> ENTERO .)
    PT_COMA         reduce using rule 62 (expresion -> ENTERO .)
    PARC            reduce using rule 62 (expresion -> ENTERO .)
    ARROW           reduce using rule 62 (expresion -> ENTERO .)
    SEP_MATCH       reduce using rule 62 (expresion -> ENTERO .)
    COMA            reduce using rule 62 (expresion -> ENTERO .)


state 26

    (63) expresion -> DECIMAL .

    MAS             reduce using rule 63 (expresion -> DECIMAL .)
    MENOS           reduce using rule 63 (expresion -> DECIMAL .)
    MULTI           reduce using rule 63 (expresion -> DECIMAL .)
    DIV             reduce using rule 63 (expresion -> DECIMAL .)
    MODULO          reduce using rule 63 (expresion -> DECIMAL .)
    IGUAL_IGUAL     reduce using rule 63 (expresion -> DECIMAL .)
    NO_IGUAL        reduce using rule 63 (expresion -> DECIMAL .)
    MAYOR           reduce using rule 63 (expresion -> DECIMAL .)
    MENOR           reduce using rule 63 (expresion -> DECIMAL .)
    MAYOR_IGUAL     reduce using rule 63 (expresion -> DECIMAL .)
    MENOR_IGUAL     reduce using rule 63 (expresion -> DECIMAL .)
    AND             reduce using rule 63 (expresion -> DECIMAL .)
    OR              reduce using rule 63 (expresion -> DECIMAL .)
    PUNTO           reduce using rule 63 (expresion -> DECIMAL .)
    LLAVA           reduce using rule 63 (expresion -> DECIMAL .)
    PT_COMA         reduce using rule 63 (expresion -> DECIMAL .)
    PARC            reduce using rule 63 (expresion -> DECIMAL .)
    ARROW           reduce using rule 63 (expresion -> DECIMAL .)
    SEP_MATCH       reduce using rule 63 (expresion -> DECIMAL .)
    COMA            reduce using rule 63 (expresion -> DECIMAL .)


state 27

    (64) expresion -> CARACTER .

    MAS             reduce using rule 64 (expresion -> CARACTER .)
    MENOS           reduce using rule 64 (expresion -> CARACTER .)
    MULTI           reduce using rule 64 (expresion -> CARACTER .)
    DIV             reduce using rule 64 (expresion -> CARACTER .)
    MODULO          reduce using rule 64 (expresion -> CARACTER .)
    IGUAL_IGUAL     reduce using rule 64 (expresion -> CARACTER .)
    NO_IGUAL        reduce using rule 64 (expresion -> CARACTER .)
    MAYOR           reduce using rule 64 (expresion -> CARACTER .)
    MENOR           reduce using rule 64 (expresion -> CARACTER .)
    MAYOR_IGUAL     reduce using rule 64 (expresion -> CARACTER .)
    MENOR_IGUAL     reduce using rule 64 (expresion -> CARACTER .)
    AND             reduce using rule 64 (expresion -> CARACTER .)
    OR              reduce using rule 64 (expresion -> CARACTER .)
    PUNTO           reduce using rule 64 (expresion -> CARACTER .)
    LLAVA           reduce using rule 64 (expresion -> CARACTER .)
    PT_COMA         reduce using rule 64 (expresion -> CARACTER .)
    PARC            reduce using rule 64 (expresion -> CARACTER .)
    ARROW           reduce using rule 64 (expresion -> CARACTER .)
    SEP_MATCH       reduce using rule 64 (expresion -> CARACTER .)
    COMA            reduce using rule 64 (expresion -> CARACTER .)


state 28

    (65) expresion -> CADENA .

    MAS             reduce using rule 65 (expresion -> CADENA .)
    MENOS           reduce using rule 65 (expresion -> CADENA .)
    MULTI           reduce using rule 65 (expresion -> CADENA .)
    DIV             reduce using rule 65 (expresion -> CADENA .)
    MODULO          reduce using rule 65 (expresion -> CADENA .)
    IGUAL_IGUAL     reduce using rule 65 (expresion -> CADENA .)
    NO_IGUAL        reduce using rule 65 (expresion -> CADENA .)
    MAYOR           reduce using rule 65 (expresion -> CADENA .)
    MENOR           reduce using rule 65 (expresion -> CADENA .)
    MAYOR_IGUAL     reduce using rule 65 (expresion -> CADENA .)
    MENOR_IGUAL     reduce using rule 65 (expresion -> CADENA .)
    AND             reduce using rule 65 (expresion -> CADENA .)
    OR              reduce using rule 65 (expresion -> CADENA .)
    PUNTO           reduce using rule 65 (expresion -> CADENA .)
    LLAVA           reduce using rule 65 (expresion -> CADENA .)
    PT_COMA         reduce using rule 65 (expresion -> CADENA .)
    PARC            reduce using rule 65 (expresion -> CADENA .)
    ARROW           reduce using rule 65 (expresion -> CADENA .)
    SEP_MATCH       reduce using rule 65 (expresion -> CADENA .)
    COMA            reduce using rule 65 (expresion -> CADENA .)


state 29

    (66) expresion -> TRUE .

    MAS             reduce using rule 66 (expresion -> TRUE .)
    MENOS           reduce using rule 66 (expresion -> TRUE .)
    MULTI           reduce using rule 66 (expresion -> TRUE .)
    DIV             reduce using rule 66 (expresion -> TRUE .)
    MODULO          reduce using rule 66 (expresion -> TRUE .)
    IGUAL_IGUAL     reduce using rule 66 (expresion -> TRUE .)
    NO_IGUAL        reduce using rule 66 (expresion -> TRUE .)
    MAYOR           reduce using rule 66 (expresion -> TRUE .)
    MENOR           reduce using rule 66 (expresion -> TRUE .)
    MAYOR_IGUAL     reduce using rule 66 (expresion -> TRUE .)
    MENOR_IGUAL     reduce using rule 66 (expresion -> TRUE .)
    AND             reduce using rule 66 (expresion -> TRUE .)
    OR              reduce using rule 66 (expresion -> TRUE .)
    PUNTO           reduce using rule 66 (expresion -> TRUE .)
    LLAVA           reduce using rule 66 (expresion -> TRUE .)
    PT_COMA         reduce using rule 66 (expresion -> TRUE .)
    PARC            reduce using rule 66 (expresion -> TRUE .)
    ARROW           reduce using rule 66 (expresion -> TRUE .)
    SEP_MATCH       reduce using rule 66 (expresion -> TRUE .)
    COMA            reduce using rule 66 (expresion -> TRUE .)


state 30

    (67) expresion -> FALSE .
